@@ -9,6 +9,7 @@ xine-lib
   * DVB EPG: fixed incorrectly parsed running status, clear old epg data, cropped epg texts
   * updated included libdvdnav: more graceful handling of some error conditions;
     fixed playback of some strangely authored DVDs
+  * fixed problem with first subtitle not showing when using separate subtitle files
 
 xine-lib (1-rc8)
   * Multiple security vulnerabilities fixed on PNM and Real RTSP clients
